--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,35 @@ a {
     text-align: center;
 }
 
+.explore .explore-search {
+    width: 100%;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 45px;
+    background-color: var(--neutral);
+    border-color: var(--carbon);
+    display: flex;
+    margin: 20px 0px;
+}
+
+.explore .explore-search input {
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 15px;
+}
+
+.explore .explore-search button {
+    border: 0;
+    background-color: rgb(61, 122, 243);
+    border-radius: 0px 45px 45px 0px;
+    cursor: pointer;
+    text-align: center;
+    color: #fff;
+    padding: 0px 15px;
+}
+
 .explore .explore-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
